# Kanterm

./: .gitignore  .mcp.json  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  DESIGN.ja.md  DESIGN.md  LICENSE  README.ja.md  README.md  RELEASE.ja.md  RELEASE.md  SECURITY.ja.md  SECURITY.md  install.sh
crates/kanban-core/: Cargo.toml
crates/kanban-core/src/: activity.rs  agents.rs  boards.rs  cards.rs  columns.rs  database.rs  dates.rs  dependencies.rs  domain.rs  export.rs  id.rs  labels.rs  lib.rs  memories.rs  rows.rs  search.rs  tests.rs  ui_state.rs
crates/kanban-core/src/agents/: register.rs  token.rs
crates/kanban-core/src/boards/: mod.rs  tests.rs
crates/kanban-core/src/cards/: claim.rs  create.rs  fields.rs  mod.rs  plan.rs  read.rs  tests.rs  update.rs
crates/kanban-core/src/cards/fields/: labels.rs  metadata.rs  movement.rs
crates/kanban-core/src/columns/: delete.rs  mutate.rs  read.rs
crates/kanban-core/src/dependencies/: cycle.rs  mod.rs  read.rs  stage.rs  write.rs
crates/kanban-core/src/domain/: entities.rs  mod.rs  priority.rs
crates/kanban-core/src/memories/: mod.rs  record.rs  update.rs
crates/kanban-core/src/migrations/: 0001_init.sql  0003_board_archive.sql  0004_memories.sql  0006_card_agent_fields.sql  0007_card_claims.sql  0008_board_order.sql  0009_main_planning_columns.sql  0010_card_agent_notes.sql  0011_backlog_default_board_name.sql  0013_unique_backlog_board.sql  0016_agent_execution_metadata.sql  0017_card_dependencies.sql  0019_agent_handoffs.sql
crates/kanban-core/tests/: backup.rs  integration.rs  undo.rs
crates/kanban-core/tests/integration/: agent_workflow.rs  boards_cards.rs  dependencies.rs  memories.rs  migrations.rs
crates/kanban-core/tests/integration/agent_workflow/: claims.rs  metadata.rs  mod.rs  search_move.rs
crates/kanban-core/tests/integration/boards_cards/: basic.rs  boards.rs  columns.rs  mod.rs
crates/kanban-tui/: Cargo.toml
crates/kanban-tui/src/: app.rs  layout.rs  main.rs  mode.rs  theme.rs
crates/kanban-tui/src/app/: render.rs  render_board.rs  render_board_dialogs.rs  render_card_move_dialogs.rs  render_dependency_graph.rs  render_detail.rs  render_dialogs.rs  render_memory_dialogs.rs  render_popups.rs  render_status.rs
crates/kanban-tui/src/app/actions/: board.rs  board_admin.rs  board_state.rs  mod.rs  (+15 more)
crates/kanban-tui/src/theme/: parser.rs
crates/kanterm/: Cargo.toml
crates/kanterm-mcp/: Cargo.toml
crates/kanterm-mcp/src/: agent_task.rs  cli.rs  handlers.rs  instructions.rs  lookup.rs  main.rs  params.rs  render.rs  targets.rs  watch.rs  workflow.rs
crates/kanterm-mcp/src/agent_task/: args.rs  command.rs  completion.rs  runner.rs
crates/kanterm-mcp/src/handlers/: agents.rs  boards.rs  columns.rs  handoffs.rs  memories.rs
crates/kanterm-mcp/src/hooks/: commands.rs  process.rs  settings.rs
crates/kanterm-mcp/src/params/: handoffs.rs  memories.rs
crates/kanterm-mcp/src/targets/: parser.rs
crates/kanterm-mcp/src/watch/: args.rs  delivery.rs
crates/kanterm-mcp/src/workflow/: args.rs  runner.rs
crates/kanterm-mcp/tests/: stdio.rs
crates/kanterm-mcp/tests/stdio/: dependencies.rs  memories.rs  support.rs  tools.rs
crates/kanterm/src/: app.rs  clipboard.rs  editor.rs  main.rs  mode.rs  theme.rs
crates/kanterm/src/app/: execution_dashboard.rs  render.rs  render_agent_metadata.rs  render_board.rs  render_board_dialogs.rs  render_card_move_dialogs.rs  render_dependency_graph.rs  render_detail.rs  render_execution_dashboard.rs  render_execution_flow.rs  render_execution_timeline.rs  render_memory_dialogs.rs  render_popups.rs  render_prompt.rs  render_status.rs
crates/kanterm/src/config_cli/: commands.rs  editor.rs  mod.rs  tests.rs
crates/kanterm/src/theme/: overrides.rs  parser.rs  presets.rs
(+203 files in other folders)
