[package]
name = "kanban-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rusqlite = { version = "0.37", features = ["bundled"] }
directories = "6"
