[package]
name = "kanban-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "kanterm"
path = "src/main.rs"

[dependencies]
kanban-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
