[package]
name = "kanterm-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "kanterm-mcp"
path = "src/main.rs"

[dependencies]
kanterm-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# Pinned: rmcp is the MCP boundary; keep the surface small and the version fixed
# so an SDK change only touches this crate (per design review).
rmcp = { version = "=1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
